[tool.poetry]
name = "thegruenbaumdotcom"
version = "0.0.1"
description = ""
authors = ["Jeff Gruenbaum <jeff.gruenbaum@gmail.com>"]
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]

[tool.poetry.dependencies]
python = ">=3.9,<=3.12"
fastapi = "^0.108.0"
fastui = "^0.4.0"
uvicorn = "^0.25.0"

[[tool.poetry.source]]
name = "pypi"
priority = "primary"

[tool.poetry.group.code-quality-check.dependencies]
black = "^23.7.0"
ruff = "^0.0.278"
mypy = "^1.4.1"
isort = "^5.12.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"